# NeonVoid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  resources.json  sdk-tools.sh  suppressions.supp  todo.tkr
.github/: pull_request_template.md
.github/workflows/: cmake-single-platform.yml  opengl-windows.yml
Game/src/: NeonFunctions.hpp
GameEngine/src/Runtime/: AudioComponent.cpp  Game.cpp  GameState.cpp
GameEngine/src/Runtime/Core/Backends/: OpenGL.cpp
scripts/: build.bat  build.sh  linux_build.sh  linux_install.sh  linux_remove.sh  linux_remove_all.sh  linux_system_install.sh  linux_system_uninstall.sh  memleak_check_linux.sh  setup-vs-2019.bat  setup-vs-2022.bat  win_install.bat  windows_build_vs2019.bat  windows_build_vs2022.bat  windows_install.bat
scripts/tools/: memleak_check_linux.sh  memleak_check_win.bat
src/: Entry.cpp
src/Game/: Game.cpp  Game.h  GameState.cpp  GameState.h  NeonFunctions.cpp  NeonFunctions.hpp  Scene.cpp  Scene.h
src/Game/Utils/: NeonFunctions.cpp  NeonFunctions.h
src/Game/assets/: game.yaml  old_game.yaml
src/Game/assets/YamlVerticies/: colour_triangle.yaml  pointy_rocket.yaml  red_circle.yaml  red_square.yaml
src/Game/assets/shaders/: shader.frag  shader.vert  shaders.yaml
src/Game/assets/shaders/Entities/: spaceship_shader.frag  spaceship_shader.vert  spaceship_shader_no_pos.vert
src/Game/assets/shaders/GreenTriangle/: shader.frag  shader.vert
src/Game/assets/shaders/Text/: shader.frag  shader.vert
src/Game/assets/shaders/VertexOnly/: shader.vert
src/Game/assets/shaders/WhiteCircle/: shader.frag  shader.vert
src/Game/include/: GameScripts.hpp  SceneScript.hpp
src/Game/src/: EntryMain.cpp  GameMain.cpp  Mankind.hpp  MyGame.cpp  MyGame.hpp  NeonFunctions.cpp  NeonFunctions.hpp  Scenes.cpp  Scenes.hpp  TitleScene.cpp  TitleScene.hpp
src/Game/src/Core/: MyGame.hpp
src/Game/src/Core/Entities/: details.md
src/Game/src/Core/Scenes/: SceneScript.cpp
src/Game/src/Entities/: ControllablePlayerEntity.cpp  ControllablePlayerEntity.hpp  MoveablePlayerEntity.cpp  MoveablePlayerEntity.hpp
src/Game/src/Scenes/: GamePlayScene.cpp  GamePlayScene.hpp  TitleScene.cpp  TitleScene.hpp
src/Game/src/Scripts/: EntityScript.cpp  SceneScript.cpp
src/GameEngine/include/NeonEngine/: All.hpp  Application.hpp  AssetManager.hpp  AudioSystem.hpp  CollisionSystem.hpp  ComponentLoader.hpp  Components.hpp  Entity.hpp  EntityTypeConverter.hpp  FunctionRegistry.hpp  PhysixSystem.hpp  RuntimeBridge.hpp  Scene.hpp  SceneTypeConverter.hpp  ScriptRegistry.hpp  Transition.hpp  Types.hpp  Volume.hpp  YamlReader.hpp  YamlSceneAsserter.hpp
src/GameEngine/src/: All.hpp  Application.cpp  Application.hpp  RuntimeBridge.cpp  RuntimeBridge.hpp
src/GameEngine/src/AssetManager/: AssetManager.cpp
src/GameEngine/src/Assets/: AssetManager.cpp
src/GameEngine/src/Assets/Loaders/: ComponentLoader.cpp  YamlReader.cpp
src/GameEngine/src/Audio/: AudioSystem.cpp  AudioSystem.hpp
src/GameEngine/src/Components/: AudioComponent.cpp  Components.hpp  MovementComponent.cpp  PositionComponent.cpp  ShaderComponent.cpp  TextComponent.cpp
src/GameEngine/src/Entity/: Entity.cpp  Entity.hpp
src/GameEngine/src/Loaders/: YamlReader.hpp
src/GameEngine/src/NeonEngine/: All.hpp  Application.cpp  Application.hpp  GameEngine.cpp  GameEngine.hpp  NeonEngine.hpp  Runtime.hpp  RuntimeBridge.cpp  RuntimeBridge.hpp  Types.hpp
src/GameEngine/src/NeonEngine/AssetManager/: AssetManager.cpp  AssetManager.hpp
src/GameEngine/src/NeonEngine/Audio/: AudioSystem.cpp  AudioSystem.hpp  Volume.hpp
src/GameEngine/src/NeonEngine/Components/: AudioComponent.cpp  Components.hpp  MovementComponent.cpp  PositionComponent.cpp  ShaderComponent.cpp  TextComponent.cpp
src/GameEngine/src/NeonEngine/Entity/: Entity.cpp  Entity.hpp
src/GameEngine/src/NeonEngine/Loaders/: YamlReader.cpp  (+1 more)
src/GameEngine/src/Runtime/: Application.cpp  Application.hpp  AudioComponent.cpp  AudioSystem.cpp  ComponentManager.cpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  Runtime.cpp  Runtime.hpp  Scene.cpp  TextComponent.cpp  Types.hpp
src/GameEngine/src/Scene/: Entity.cpp  Scene.cpp  Scene.hpp
src/GameEngine/src/Serialization/: YamlReader.cpp
src/GameEngine/src/Systems/: CollisionSystem.cpp  PhysixSystem.cpp
src/GameEngine/src/Transition/: Transition.cpp
src/GameEngine/src/Utils/: EntityTypeConverter.cpp  SceneTypeConverter.cpp  YamlSceneAsserter.cpp
src/Runtime/: AudioComponent.cpp  AudioSystem.cpp  Component.cpp  ExtRuntime.hpp  Game.cpp  GameEngine.cpp  GameEngine.h  GameState.cpp  IntRuntime.hpp  OpenGL.cpp  OpenGL.h  Runtime.cpp  Runtime.h  Runtime.hpp  RuntimeApi.cpp  RuntimeApi.hpp  Scene.cpp  Types.hpp
src/Runtime/Backends/: IFrameBuffer.hpp  IVertexArray.hpp  IVertexBuffer.hpp  Input.hpp
src/Runtime/Backends/OpenGL/: OpenGL.cpp  OpenGL.hpp  OpenGLHeaders.hpp  OpenGLInput.cpp  OpenGLInput.hpp  OpenGLRenderer.cpp  OpenGLShader.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp  OpenGlVertexArray.cpp
src/Runtime/Core/: Platform.cpp  Platform.h
src/Runtime/Core/Backends/: OpenGL.cpp
src/Runtime/Factory/: ShaderFactory.cpp  ShaderFactory.hpp
src/Runtime/Platform/: OpenGL.cpp  OpenGL.h
src/Runtime/include/NeonRuntime/: BufferFactory.hpp  ExtRuntime.hpp  IInput.hpp  IPlatform.hpp  IRenderer.hpp  IShader.hpp  ITextBuffer.hpp  IVertexBuffer.hpp  IWindow.cpp  IWindow.hpp  IntRuntime.hpp  PlatformFactory.hpp  RTTypes.hpp  RuntimeApi.hpp  ShaderFactory.hpp  VerticesFactory.hpp
src/Runtime/src/: ExtRuntime.hpp  IntRuntime.hpp  RuntimeApi.cpp  RuntimeApi.hpp
src/Runtime/src/Backends/: IInput.hpp  IRenderer.hpp
src/Runtime/src/Factory/: BufferFactory.cpp  PlatformFactory.cpp  ShaderFactory.cpp  ShaderFactory.hpp  VerticesFactory.cpp
src/Runtime/src/Runtime/: Container.hpp  ExtRuntime.hpp  GameEngineApi.cpp  GameEngineApi.hpp  Runtime.hpp  RuntimeApi.cpp  RuntimeApi.hpp
src/Sandbox/include/glad/: glad.c
src/Sandbox/src/: Main.cpp
src/Sandbox/src/_1-OpenGLContext/: OpenGLWindow.cpp
(+135 files in other folders)
